# rust-auth-backend

./: Cargo.toml  diesel.toml
migrations/2025-07-12-171612_db/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/auth/: login.rs  logout.rs  mod.rs  register.rs
src/database/: db.rs
src/middleware/: auth.rs
src/services/: rabbitmq.rs
src/utils/: env.rs  mod.rs  rabbitmq.rs  response.rs  types.rs
src/validators/: mod.rs
