[package]
name = "backend_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
validator = { version =  "0.20.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
