[package]
name = "backend_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
validator = { version =  "0.20.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15.7"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
bcrypt = "0.17.0"
amqprs = "2.1.2"
rand = "0.9.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uaparser = "0.6.4"
jsonwebtoken = "9.3.1"
